# CO-Paint-ugv

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  ros2_graph.txt  ros2_report.txt
control_code/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_code/log/: latest_build
control_code/src/auto_landing_ctrl/: package.xml  setup.cfg  setup.py
control_code/src/auto_landing_ctrl/auto_landing_ctrl/: pid_landing_node.py
control_code/src/custom_msgs/: CMakeLists.txt  package.xml
control_code/src/custom_msgs/msg/: PaintWaypoint.msg
control_code/src/custom_msgs/srv/: GeneratePath.srv
control_code/src/flight_control/: package.xml  setup.py
control_code/src/flight_control/flight_control/: flight_control_node.py
control_code/src/localization_bringup/: package.xml  setup.py
control_code/src/localization_bringup/launch/: localization_master.launch.py
control_code/src/painting_drone/: README.md  package.xml  setup.cfg  setup.py
control_code/src/painting_drone/launch/: painting_vision.launch.py
control_code/src/painting_drone/models/: model파일 복사 하면 됨.txt
control_code/src/px4_gui_ctrl/: package.xml  setup.py
control_code/src/px4_gui_ctrl/px4_gui_ctrl/: auto_painter.py  drone_teleop.py  flight_control_node.py  gui_node.py  manual_controller.py  master_node.py  path_planner_node.py  path_planner_node_v2.py  requirements.txt  (+1 more)
custom_msgs/src/custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/src/custom_msgs/msg/: PaintWaypoint.msg
custom_msgs/src/custom_msgs/srv/: GeneratePath.srv
docker/co_paint/: Dockerfile
docker/co_paint/launch/: rosbridge.launch.py
docker/postgres/: init.sql
docker/server/: Dockerfile  entrypoint.sh  requirements.txt
docker/server/src/: server_node.py  telemetry_logger.py
docker/web_ui/: Dockerfile  nginx.conf
docker/web_ui/src/: index.html
middleware/: cyclonedds.xml
odometry_bridge/src/odometry_bridge/: package.xml  setup.cfg  setup.py
scripts/: check_network.sh
(+28 files in other folders)
