<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.1.0</version>
  <description>CO-Paint 커스텀 메시지 및 서비스</description>
  <maintainer email="copaint@todo.todo">copaint</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>nav_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
